--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "browserify-fs": "^1.0.0",
     "gatsby-remark-prismjs": "^3.4.5",
     "gatsby-transformer-remark": "^2.7.5",
     "gulp": "^4.0.2",
